fix: adjust letter spacing in teams card

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2129,8 +2129,10 @@ body {
 
 @media only screen and (max-width: 575px) {
   .single_advisor_profile .advisor_thumb::after {
-    height: 160px;
-    bottom: -90px;
+    height: 50px;
+    bottom: -20px;
+    transform: rotate(-10deg);
+
   }
 }
 
@@ -2167,8 +2169,12 @@ body {
   transition-duration: 500ms;
   border-radius: 0 0 15px 15px;
   background-color: #7453FC;
+  letter-spacing: normal;
 }
 
+.single_advisor_profile .single_advisor_details_info h4{
+  letter-spacing: 1px;
+}
 .single_advisor_profile .single_advisor_details_info::after {
   -webkit-transition-duration: 500ms;
   transition-duration: 500ms;
@@ -2469,7 +2475,6 @@ body {
   content: '';
   display: block;
   height: 250px;
-  text-align: center;
 }
 
 .card__background {
@@ -2500,7 +2505,20 @@ body {
 .card__heading {
   font-size: 20px;
   margin-top: 30px;
-  margin-left: 10px;
+  
 }
 
-
+@media only screen and (max-width: 575px) {
+  .card:before {
+    content: '';
+    display: inline;
+    height: 200px;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  .card:before {
+    content: '';
+    display: inline;
+    height: 200px;
+  }
+}
